# geek-conceitos-fastapi

./: .gitignore  pyproject.toml
client-conceitos-fastapi/: bruno.json  delete_curso.bru  get_curso_id.bru  get_cursos.bru  post_create_curso.bru  put_update_curso.bru  query_params_calc.bru  query_params_calc_header.bru
geek_conceitos_fastapi/: app.py  database.py  models.py
geek_conceitos_fastapi/routes/: curso_router.py  user_router.py
tests/: conftest.py  test.py
