[tool.poetry]
name = "geek-conceitos-fastapi"
version = "0.1.0"
description = ""
authors = ["Antonio Henrique Machado <antoniohenriquemachado08@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
fastapi = "^0.112.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^7.2.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"

[tool.taskipy.tasks]
run = 'fastapi dev geek_conceitos_fastapi/app.py'
run_nw = 'fastapi dev geek_conceitos_fastapi/app.py --host 0.0.0.0'

test = 'pytest -s -x --cov=geek_conceitos_fastapi -vv'
post_test = 'coverage html'
test_full = 'task test'

lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
